# optional.py

./: .coverage  .editorconfig  .gitignore  .travis.yml  LICENSE  README.md  Taskfile.yaml  justfile  optional.py  pyproject.toml  setup.cfg  setup.py  test_optional.py  test_requirements.txt
.github/workflows/: editorconfig.yaml  format.yaml  lint.yaml  test.yaml  typecheck.yaml
.mise/tasks/: editorconfig  format  lint  test  typecheck
optional/: Optional.py  __init__.py  abstract_optional.py  compatible_abc.py  exceptions.py  nothing.py  optional.py  optional_factory.py  something.py
src/optional/: optional.py  something.py
src/optional_py/: __init__.py  optional.py
test/: test_optional.py  test_something.py
tests/: test_optional.py  test_something.py
