[project]
name = "optional.py"
version = "3.0.0"
description = "An implementation of the Optional object in Python"
license = "MIT"
authors = [
  { name = "Chad Befus", email = "crbefus@gmail.com" },
  { name = "Derek Passen", email = "dpassen1@gmail.com" },
]
readme = "README.md"
keywords = ["optional datatype library"]
requires-python = ">= 3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "basedpyright>=1.31.7",
  "coverage>=7.10.7",
  "coveralls>=4.0.1",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.0",
  "typing-extensions>=4.15.0",
]

[tool.uv.build-backend]
module-name = "optional"

[tool.pytest.ini_options]
addopts = "--cov=optional"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
